# modflow-setup

./: .buildinfo  .coveragerc  .doctr-files  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  10min.html  AUTHORS.rst  LICENSE.md  MANIFEST.in  README.rst  Readme.md  appveyor.yml  code.json  config-file-defaults.html  config-file-gallery.html  config-file-structure.html  config-file.html  contributing.html  environment-dev.yml  environment.yml  examples.html  genindex.html  gis.yml  github_deploy_key_aleaf_modflow_setup.enc  index.html  installation.html  make_release.sh  objects.inv  philosophy.html  py-modindex.html  pyproject.toml  references.html  release-history.html  requirements-dev.txt  requirements-dev.yml  requirements.txt  requirements.yml  (+8 more)
.github/: CODEOWNERS
_modules/: index.html
_sources/: config-file-defaults.rst.txt  config-file-gallery.rst.txt  config-file.rst.txt  contributing.rst.txt  examples.rst.txt  index.rst.txt  installation.rst.txt  philosophy.rst.txt  references.rst.txt  release-history.rst.txt  troubleshooting.rst.txt
_static/: documentation_options.js
api/: index.html  mfsetup.discretization.html  mfsetup.fileio.html  mfsetup.grid.html  mfsetup.interpolate.html  mfsetup.mf6model.html  mfsetup.mfmodel.html  mfsetup.mfnwtmodel.html  mfsetup.tdis.html  mfsetup.tmr.html
binder/: environment.yml  postBuild
ci/: 37-conda-flopy.yml  latest-python-flopy-develop.yml  py36.yml  requirements.yml  test_environment.yaml
concepts/: index.html  interp.html  lgr.html  perimeter-bcs.html
examples/: Pleasant_lake_lgr_example.ipynb  initial_config_box.yaml  initial_config_full.yaml  initial_grid_setup.py  initial_model_setup.py  pleasant_lgr_inset.yml  pleasant_lgr_parent.yml  update_starting_heads_from_previous.py
input/: basic-stress.html  dis.html  ic.html  index.html  lak.html  obs.html  oc.html  props.html  sfr.html
latest/: .buildinfo  10min.html  config-file-defaults.html  config-file-gallery.html  config-file-structure.html  config-file.html  index.html  (+13 more)
(+376 files in other folders)
